<resources>
    <string name="crash_button_name">Test Crash</string>
    <string name="channel_name">channel_name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="question_answer">Question Answer</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="or_login_with">or login with</string>
    <string name="header">Header</string>
    <string name="start_write">Start write...</string>
    <string name="save">save</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add">add</string>
    <string name="register">Register</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="confirm_password">Confirm Password</string>
</resources>