<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4d4d4d"
    tools:context=".ui.note.NewNoteFragment">

    <EditText
        android:id="@+id/new_note_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@drawable/auth_custom_edittext"
        android:hint="@string/header"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="#333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/new_note_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/auth_custom_edittext"
        android:hint="@string/start_write"
        android:gravity="start"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="#333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_note_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_send"
        android:layout_margin="30dp"
        android:backgroundTint="#EF7A21"
        app:borderWidth="0dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/save" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>